Deploy: dockerfile 수정 (#12)
- base image openjdk -> alpine으로 변경
- jdk 대신 jre를 사용하기 위한 stage 추가
 #11